--- a/_styles/figure.scss
+++ b/_styles/figure.scss
@@ -20,6 +20,12 @@
   box-shadow: var(--shadow);
 }
 
+.figure-image-no-shadow img {
+  border-radius: var(--rounded);
+  overflow: hidden;
+
+}
+
 .figure-caption {
   font-style: italic;
   text-align: center;
