--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,27 +16,31 @@
   -->
 
   <div>
+      &copy; {{ site.time | date: "%Y" }}
+      {{ site.title }}
+      &nbsp; |
     {% for link in site.links %}
       {% assign key = link[0] %}
       {% assign value = link[1] %}
       {% include button.html type=key text="" link=value style="bare" %}
     {% endfor %}
+    
   </div>
 
-  <div>
+  <!-- <div>
     &copy; {{ site.time | date: "%Y" }}
     {{ site.title }}
     &nbsp; | &nbsp; Built with
     <a href="https://github.com/greenelab/lab-website-template">
       Lab Website Template
     </a>
-  </div>
-
+  </div> -->
+<!-- 
   <input
     type="checkbox"
     class="dark-toggle"
     data-tooltip="Dark mode"
     aria-label="toggle dark mode"
     oninput="onDarkToggleChange(event)"
-  >
+  > -->
 </footer>
