--- a/_styles/citation.scss
+++ b/_styles/citation.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-$thumb-size: 180px;
+$thumb-size: 150px;
 $wrap: 800px;
 
 .citation {
@@ -25,6 +25,9 @@ $wrap: 800px;
   inset: 0;
   width: 100%;
   height: 100%;
+  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   object-fit: contain;
 }
 
@@ -32,11 +35,11 @@ $wrap: 800px;
   position: relative;
   display: inline-flex;
   flex-wrap: wrap;
-  gap: 15px;
+  gap: 10px;
   max-width: 100%;
   height: min-content;
   padding: 20px;
-  padding-left: 30px;
+  padding-left: 20px;
   text-align: left;
   overflow-wrap: break-word;
   z-index: 0;
