--- a/_styles/header.scss
+++ b/_styles/header.scss
@@ -1,9 +1,9 @@
 ---
 ---
 
-$logo-big: 80px;
-$logo: 40px;
-$big-padding: 100px;
+$logo-big: 60px;
+$logo: 70px;
+$big-padding: 10px;
 $collapse: 700px;
 $sticky: true;
 
@@ -12,8 +12,8 @@ header {
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  gap: 20px;
-  padding: 20px;
+  gap: 10px;
+  padding: 10px;
   box-shadow: var(--shadow);
 
   @if $sticky {
@@ -103,6 +103,7 @@ nav {
   flex-wrap: wrap;
   gap: 10px;
   font-family: var(--heading);
+  font-size: var(--large);
   text-transform: uppercase;
 }
 
