--- a/_styles/heading.scss
+++ b/_styles/heading.scss
@@ -15,7 +15,8 @@ h1 {
   font-weight: var(--regular);
   letter-spacing: 1px;
   text-transform: uppercase;
-  text-align: left;
+  text-align: center;
+  color: var(--primary);
 }
 
 h2 {
@@ -26,6 +27,8 @@ h2 {
   font-weight: var(--regular);
   letter-spacing: 1px;
   text-align: left;
+  color: var(--primary);
+  
 }
 
 h3 {
