--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,3 +1,9 @@
-<!--
-  put your analytics (e.g. Google Analytics) tracking code here
--->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0SGMLE1249"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0SGMLE1249');
+</script>
